--- a/style.css
+++ b/style.css
@@ -1,54 +1,79 @@
 body {
-	margin: 0;
-	margin: 0 20%;
+  margin: 0;
+  margin: 0 20%;
+  margin-bottom: 20%;
 }
 
-
 /* Use following for the map. */
-
 #leaflet {
-	border: black 3px solid;
-	align-self: center;
-	background-color: #262626;
+  border: black 3px solid;
+  background-color: #262626;
+  text-align: left;
+
+}
+
+#titleLine {
+  left: 50%;
+  margin: 0;
+  box-shadow: 2px 2px #000000;
 }
 
 #organization {
-	color: #1a8061;
-	/* color: #4f3a52; */
+  color: #1a8061;
 }
 
 #title {
-	color: #5E93D1;
+  color: #5e93d1;
 }
 
 #subtitle {
-	color: #262626;
-	font-weight: bold;
+  color: #262626;
+  font-weight: bold;
 }
 
 #info {
-	margin-top: 3px;
+  margin-top: 3px;
 }
 
 #legend {
-	background-color: #262626;
+  background-color: #262626;
 }
 
 #maptitle {
-	width: 220px;
-	font-family: 'Times New Roman', Times, serif;
-	color: #61A0D7;
-	margin-top: 75px;
-	margin-left: 15px;
-	font-size: 32px;
+  width: 85%;
+  font-family: monospace;
+  color: #89b7df;
+
+  text-shadow: 2px 2px #000000;
+  font-size: 1.35vw;
 }
 
 #maptext {
-	max-width: 240px;
-	font-family: 'Times New Roman', Times, serif;
-	color: #61A0D7;
-	margin-left: 15px;
-	/* position: absolute; */
-	margin-bottom:100px;
-	font-size: 16px;
+  color: #89b7df;
+  font-size: 0.7vw;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
+
+h2 {
+  margin: 0;
+}
+
+.leaflet-control {
+  width: 20%;
+  margin-left: 1rem;
+  padding: 2%;
+  border-radius: 5%;
+}
+
+
+.leaflet-container .leaflet-control-attribution,
+.leaflet-container .leaflet-control-scale {
+  width: 0px;
+}
+
+.js-loading *,
+.js-loading *:before,
+.js-loading *:after {
+  animation-play-state: paused !important;
 }
