--- a/style.css
+++ b/style.css
@@ -72,8 +72,30 @@ h2 {
   width: 0px;
 }
 
-.js-loading *,
+/* .js-loading *,
 .js-loading *:before,
 .js-loading *:after {
   animation-play-state: paused !important;
+} */
+
+
+
+
+.boxLoading {
+  border: 16px solid #837d7d;
+  border-top: 16px solid #3498db; 
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 1s linear infinite;
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10vh;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
