--- a/style.css
+++ b/style.css
@@ -1,15 +1,78 @@
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+html,
 body {
-  margin: 0;
-  margin: 0 20%;
-  margin-bottom: 20%;
+  height: 100%;
+  padding: 0;
+  /* margin: 0 20%; */
+  display: block;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+.container {
+  height: 60vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  /* overflow: visible; */
+}
+
+.map-container {
+  height: 100%;
+  /* Fallback for vmin */
+  padding: 0px 1rem 1rem 1rem;
+  padding: 0px 1vmin 1vmin 1vmin;
+  /* overflow: visible; */
+}
+
+.map-frame {
+  height: 100%;
+  width: 100%;
+  /*   We use outline over border as has issues in some cases */
+  outline: 1px solid black;
+  /* overflow: visible; */
 }
 
 /* Use following for the map. */
 #leaflet {
-  border: black 3px solid;
-  background-color: #262626;
+  /* border: black 3px solid;
   text-align: left;
+  position: absolute;
+  bottom: 0;
+  height: 50vw;
+  width: 50vh; */
+  background-color: #262626;
+  height: 100%;
+  /* overflow: visible; */
+}
 
+@supports (display: flex) {
+  .map-container {
+    height: 0;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+  }
+
+  .map-frame {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+  }
 }
 
 #titleLine {
@@ -66,7 +129,6 @@ h2 {
   border-radius: 5%;
 }
 
-
 .leaflet-container .leaflet-control-attribution,
 .leaflet-container .leaflet-control-scale {
   width: 0px;
@@ -78,12 +140,9 @@ h2 {
   animation-play-state: paused !important;
 } */
 
-
-
-
 .boxLoading {
   border: 16px solid #837d7d;
-  border-top: 16px solid #3498db; 
+  border-top: 16px solid #3498db;
   border-radius: 50%;
   width: 120px;
   height: 120px;
@@ -96,6 +155,16 @@ h2 {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.leaflet-popup-content {
+  max-width: 45vw;
+  height: 25vh;
+  overflow-y: scroll;
 }
