--- a/style.css
+++ b/style.css
@@ -72,15 +72,6 @@ h2 {
   width: 0px;
 }
 
-/* .js-loading *,
-.js-loading *:before,
-.js-loading *:after {
-  animation-play-state: paused !important;
-} */
-
-
-
-
 .boxLoading {
   border: 16px solid #837d7d;
   border-top: 16px solid #3498db; 
@@ -98,4 +89,10 @@ h2 {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+.leaflet-popup-content {
+  max-width: 45vw;
+  height: 25vh;
+  overflow-y: auto;
 }
