--- a/style.css
+++ b/style.css
@@ -104,19 +104,21 @@ body {
 
 #maptitle {
   width: 85%;
-  font-family: monospace;
-  color: #89b7df;
+  font-family: sans-serif;
+  color: #afcee9;
 
-  text-shadow: 2px 2px #000000;
-  font-size: 1.35vw;
+  /* text-shadow: 2px 2px #000000; */
+  font-size: x-large;
+ 
 }
 
 #maptext {
-  color: #89b7df;
-  font-size: 0.7vw;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
-    1px 1px 0 #000;
-}
+  color: #afcee9;
+  font-size:medium;
+  /* text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000; */
+    font-family: sans-serif;
+  }
 
 h2 {
   margin: 0;
@@ -134,12 +136,6 @@ h2 {
   width: 0px;
 }
 
-/* .js-loading *,
-.js-loading *:before,
-.js-loading *:after {
-  animation-play-state: paused !important;
-} */
-
 .boxLoading {
   border: 16px solid #837d7d;
   border-top: 16px solid #3498db;
@@ -148,7 +144,7 @@ h2 {
   height: 120px;
   animation: spin 1s linear infinite;
 
-  display: block;
+  /* display: block; */
   margin-left: auto;
   margin-right: auto;
   margin-top: 10vh;
@@ -166,5 +162,5 @@ h2 {
 .leaflet-popup-content {
   max-width: 45vw;
   height: 25vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
