--- a/style.css
+++ b/style.css
@@ -41,15 +41,16 @@ body {
 
 #maptitle {
   width: 85%;
-  font-family: monospace;
-  color: #89b7df;
+  font-family: sans-serif;
+  color: #afcee9;
 
 /*   text-shadow: 2px 2px #000000; */
   font-size: 1.35vw;
 }
 
 #maptext {
-  color: #89b7df;
+  font-family: sans-serif;
+  color: #afcee9;
   font-size: 0.7vw;
 /*   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, */
 /*     1px 1px 0 #000; */
